# mvp_c2

./: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
config/: commander_setting.yaml  commander_udp_setting.yaml  reporter_udp_setting.yaml  serial_setting.yaml  topside_udp_setting.yaml  udp_setting.yaml  vehicle_udp_setting.yaml
launch/: commander_launch.py  reporter_launch.py  test_launch.py  topside_c2_launch.py  vehicle_c2_launch.py
mvp_c2/: __init__.py  dccl_checksum.py  mvp_c2_comm.py  mvp_c2_commander.py  mvp_c2_commander_ros.py  mvp_c2_dccl_ros.py  mvp_c2_reporter.py  mvp_c2_reporter_ros.py  mvp_c2_serial_comm.py  mvp_c2_udp_comm.py  my_node.py  package.xml  tcp_test.py
mvp_c2/include/: dccl_checksum.py  roslaunch_manager.py  serial_interface.py  udp_interface.py
mvp_c2/proto/: mvp_cmd_dccl.proto  mvp_cmd_dccl_pb2.py
mvp_c2/scripts/: example_dccl.py  mvp_c2_reporter.py
proto/: mvp_cmd_dccl.proto
scripts/: example_dccl.py  mvp_c2_reporter.py
