<?xml version="1.0"?>
<package format="3">
  <name>mvp_c2</name>
  <version>0.1.0</version>
  <description>ROS 2 package for the MVP C2 node.</description>
  <maintainer email="mzhou@uri.edu">Your Name</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

</package>
